# static/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.2",
   "info": {
-    "version": "1.0.4",
+    "version": "1.0.5",
     "title": "Prototype API BETA",
     "description": "Demonstration of how to create a simple API and automate the deployment process",
     "termsOfService": "",
@@ -38,7 +38,8 @@
             "description": "Success"
           },
           "400": {
-            "description": "Failure"
+            "description": "Failure",
+            "schema": "#/components/schemas/error"
           }
         }
       }
@@ -55,7 +56,7 @@
             "in": "query",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/positive_integer"
+              "$ref": "#/components/schemas/sobol_dimension/"
             }
           },
           {
@@ -63,16 +64,18 @@
             "in": "query",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/positive_integer"
+              "$ref": "#/components/schemas/sobol_length/"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "schema": "#/components/schemas/sobol_sequence/"
           },
           "400": {
-            "description": "Failure"
+            "description": "Failure",
+            "schema": "#/components/schemas/error"
           }
         }
       }
@@ -109,7 +112,8 @@
             }
           },
           "400": {
-            "description": "Failed. Bad post data."
+            "description": "Failed",
+            "schema": "#/components/schemas/error"
           }
         }
       }
@@ -117,9 +121,15 @@
   },
   "components": {
     "schemas": {
-      "positive_integer": {
+      "sobol_dimension": {
         "type": "integer",
-        "minimum": 1
+        "minimum": 1,
+        "maximum": 1111
+      },
+      "sobol_length": {
+        "type": "integer",
+        "minimum": 1,
+        "maximum": 1048576
       },
       "float_array": {
         "description": "array of floating-point numbers, NB '3.' won't parse, use '3' or '3.0'",
@@ -127,6 +137,34 @@
         "items": {
           "type": "number"
         }
+      },
+      "sobol_sequence": {
+        "description": "a Sobol sequence: an array of n arrays of length dim, containing floating-point values in [0,1)",
+        "type": "array",
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "number",
+            "minimum": 0.0,
+            "exclusiveMaximum": 1.0
+          }
+        }
+      },
+      "error": {
+        "description": "error information",
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer"
+          },
+          "type": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
       }
     }
   }
